fixed issue with images not being aligned with flex

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ img{
     width: 200px;
     height: 200px;
 }
-.food-header{
-    
+.container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
 }
